--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@nuxtjs/strapi": "^1.9.1",
-    "@types/node": "^18",
+    "@types/node": "^18.16.3",
     "nuxt": "^3.4.3"
   }
 }
