--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@nuxtjs/strapi": "^1.9.1",
     "@types/node": "^18.16.3",
-    "nuxt": "^3.4.3"
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.4.3",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
