--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,5 +18,8 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@amcharts/amcharts5": "^5.3.11"
   }
 }
